fix hexagon alignment

--- a/frontend/storyhive/src/components/hexagon.css
+++ b/frontend/storyhive/src/components/hexagon.css
@@ -12,8 +12,8 @@
 
 .container .hexagonArea .hexagon{
     position: relative;
-    width: 50px;
-    height: 62.5px;
+    width: 50px; /*keep ratio of width to height*/
+    height: 62.5px; /*keep ratio of width to height */
     margin: -5px 5px;
     clip-path: polygon(0 25%, 50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%);
     background: #E5AC3F;
@@ -47,17 +47,17 @@
 /* have to do individually or else messes up hover scaling */
 .container .hexagonArea .hexagon:nth-child(7n+5) {
     grid-column: 2 / span 1;
-    margin-left: -27px;
+    margin-left: -29px; /*WORKING ON THISmove left right*/
 }
 
 .container .hexagonArea .hexagon:nth-child(7n+6) {
     grid-column: 3 / span 1;
-    margin-left: -27px;
+    margin-left: -29px; /*move left right*/
 }
 
 .container .hexagonArea .hexagon:nth-child(7n+7) {
     grid-column: 4 / span 1;
-    margin-left: -27px;
+    margin-left: -29px; /*move left right*/
 }
 
 /* Default for other hexagons, 4 columns */
